--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-split": "^2.0.14",
     "react-toastify": "^10.0.3",
     "react-youtube": "^10.1.0"
   },
